# ChangeLog for dev-db/postgresql-base
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.116 2011/04/23 18:42:04 grobian Exp $

  23 Apr 2011; Fabian Groffen <grobian@gentoo.org>
  postgresql-base-9.0.4.ebuild, +files/postgresql-base-9.0.4-stdbool.patch,
  postgresql-base-9.1_alpha5.ebuild:
  Fixed for and marked ~ppc-macos

  23 Apr 2011; Fabian Groffen <grobian@gentoo.org>
  postgresql-base-9.0.3.ebuild, postgresql-base-9.0.3-r1.ebuild,
  postgresql-base-9.0.4.ebuild, postgresql-base-9.1_alpha5.ebuild:
  Fixed for and marked ~x86-solaris

*postgresql-base-9.0.4 (20 Apr 2011)
*postgresql-base-8.4.8 (20 Apr 2011)
*postgresql-base-8.3.15 (20 Apr 2011)
*postgresql-base-8.2.21 (20 Apr 2011)

  20 Apr 2011; Aaron W. Swenson <titanofold@gentoo.org>
  +postgresql-base-8.2.21.ebuild, +postgresql-base-8.3.15.ebuild,
  +postgresql-base-8.4.8.ebuild, +postgresql-base-9.0.4.ebuild:
  Version bumps

*postgresql-base-9.1_alpha5 (31 Mar 2011)

  31 Mar 2011; Aaron W. Swenson <titanofold@gentoo.org>
  +postgresql-base-9.1_alpha5.ebuild:
  Version bump.

*postgresql-base-8.4.7-r2 (24 Mar 2011)
*postgresql-base-8.3.14-r2 (24 Mar 2011)
*postgresql-base-8.2.20-r2 (24 Mar 2011)

  24 Mar 2011; Aaron W. Swenson <titanofold@gentoo.org>
  +postgresql-base-8.2.20-r2.ebuild, +postgresql-base-8.3.14-r2.ebuild,
  +postgresql-base-8.4.7-r2.ebuild:
  Fixes bug 358989

  22 Mar 2011; Aaron W. Swenson <titanofold@gentoo.org>
  postgresql-base-9.0.3-r1.ebuild:
  Fixed typo in LDPATH. Fixes bug 359867.

  21 Mar 2011; Aaron W. Swenson <titanofold@gentoo.org>
  postgresql-base-8.4.7-r1.ebuild:
  Fixed typos in downloading and applying patches.

*postgresql-base-9.0.3-r1 (21 Mar 2011)
*postgresql-base-8.4.7-r1 (21 Mar 2011)
*postgresql-base-8.3.14-r1 (21 Mar 2011)
*postgresql-base-8.2.20-r1 (21 Mar 2011)

  21 Mar 2011; Aaron W. Swenson <titanofold@gentoo.org>