@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/postgresql-base
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.116 2011/04/23 18:42:04 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.117 2011/05/03 01:32:08 titanofold Exp $
+
+*postgresql-base-9.1_beta1 (03 May 2011)
+
+  03 May 2011; Aaron W. Swenson <titanofold@gentoo.org>
+  +postgresql-base-9.1_beta1.ebuild:
+  Version bump
 
   23 Apr 2011; Fabian Groffen <grobian@gentoo.org>
   postgresql-base-9.0.4.ebuild, +files/postgresql-base-9.0.4-stdbool.patch,
